fix status bars contrast
This style cannot be used in light mode only dark mode,
so this is a little reduntant.

Consider removing or alternate design.

--- a/dd-wrt-inspired-themes.user.styl
+++ b/dd-wrt-inspired-themes.user.styl
@@ -981,7 +981,7 @@ b() { box-shadow: arguments }
         border-color: bg5
 
         .text {
-            if (light(AC)) {
+            if (dark(BG)) {
                 color: v98
                 text-shadow: 0 1px 0 v90
             }
